; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/dreamcast/sh2rec/extr_sh2rec.c_generateMOVLLG.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/dreamcast/sh2rec/extr_sh2rec.c_generateMOVLLG.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32, i32 }

@R_PR = common dso_local global i32 0, align 4
@R10 = common dso_local global i32 0, align 4
@R4 = common dso_local global i32 0, align 4
@R9 = common dso_local global i32 0, align 4
@R1 = common dso_local global i32 0, align 4
@OP_EXTUB = common dso_local global i32 0, align 4
@R0 = common dso_local global i32 0, align 4
@OP_ADD = common dso_local global i32 0, align 4
@R8 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.TYPE_12__*)* @generateMOVLLG to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @generateMOVLLG(i32 %0, %struct.TYPE_12__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_12__*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.TYPE_12__* %1, %struct.TYPE_12__** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @INSTRUCTION_CD(i32 %6)
  store i32 %7, i32* %5, align 4
  %8 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %9 = load i32, i32* @R_PR, align 4
  %10 = load i32, i32* @R10, align 4
  %11 = call i32 @emitSTS(%struct.TYPE_12__* %8, i32 %9, i32 %10)
  %12 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @R4, align 4
  %15 = call i32 @emitMOVI(%struct.TYPE_12__* %12, i32 %13, i32 %14)
  %16 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %17 = load i32, i32* @R9, align 4
  %18 = load i32, i32* @R1, align 4
  %19 = call i32 @emitMOVLL4(%struct.TYPE_12__* %16, i32 %17, i32 2, i32 %18)
  %20 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %21 = load i32, i32* @R4, align 4
  %22 = load i32, i32* @R4, align 4
  %23 = load i32, i32* @OP_EXTUB, align 4
  %24 = call i32 @emitALU(%struct.TYPE_12__* %20, i32 %21, i32 %22, i32 %23)
  %25 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %26 = call i32 @emitMOVLLG(%struct.TYPE_12__* %25, i32 17)
  %27 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %28 = load i32, i32* @R4, align 4
  %29 = call i32 @emitSHLL2(%struct.TYPE_12__* %27, i32 %28)
  %30 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %31 = load i32, i32* @R1, align 4
  %32 = call i32 @emitJSR(%struct.TYPE_12__* %30, i32 %31)
  %33 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %34 = load i32, i32* @R0, align 4
  %35 = load i32, i32* @R4, align 4
  %36 = load i32, i32* @OP_ADD, align 4
  %37 = call i32 @emitALU(%struct.TYPE_12__* %33, i32 %34, i32 %35, i32 %36)
  %38 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %39 = load i32, i32* @R10, align 4
  %40 = load i32, i32* @R_PR, align 4
  %41 = call i32 @emitLDS(%struct.TYPE_12__* %38, i32 %39, i32 %40)
  %42 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %43 = load i32, i32* @R0, align 4
  %44 = load i32, i32* @R8, align 4
  %45 = call i32 @emitMOVLS4(%struct.TYPE_12__* %42, i32 %43, i32 0, i32 %44)
  %46 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %47 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %46, i32 0, i32 1
  %48 = load i32, i32* %47, align 4
  %49 = add nsw i32 %48, 1
  store i32 %49, i32* %47, align 4
  %50 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  %51 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 4
  %53 = add nsw i32 %52, 2
  store i32 %53, i32* %51, align 4
  ret void
}

declare dso_local i32 @INSTRUCTION_CD(i32) #1

declare dso_local i32 @emitSTS(%struct.TYPE_12__*, i32, i32) #1

declare dso_local i32 @emitMOVI(%struct.TYPE_12__*, i32, i32) #1

declare dso_local i32 @emitMOVLL4(%struct.TYPE_12__*, i32, i32, i32) #1

declare dso_local i32 @emitALU(%struct.TYPE_12__*, i32, i32, i32) #1

declare dso_local i32 @emitMOVLLG(%struct.TYPE_12__*, i32) #1

declare dso_local i32 @emitSHLL2(%struct.TYPE_12__*, i32) #1

declare dso_local i32 @emitJSR(%struct.TYPE_12__*, i32) #1

declare dso_local i32 @emitLDS(%struct.TYPE_12__*, i32, i32) #1

declare dso_local i32 @emitMOVLS4(%struct.TYPE_12__*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
